--- a/views/admin/item/detail_item/show_activity.ejs
+++ b/views/admin/item/detail_item/show_activity.ejs
@@ -46,7 +46,7 @@
                                             <%= activity[i].type %>
                                         </td>
                                         <td>
-                                            <img src="http://localhost:3000/<%= activity[i].imageUrl %>" alt="imageUrl"
+                                            <img src="http://admin-hotelku1.herokuapp.com/<%= activity[i].imageUrl %>" alt="imageUrl"
                                                 width="150px">
                                         </td>
                                         <td>
