--- a/views/admin/item/detail_item/show_feature.ejs
+++ b/views/admin/item/detail_item/show_feature.ejs
@@ -46,7 +46,7 @@
                                             <%= feature[i].qty %>
                                         </td>
                                         <td>
-                                            <img src="http://localhost:3000/<%= feature[i].imageUrl %>" alt="imageUrl"
+                                            <img src="http://admin-hotelku1.herokuapp.com/<%= feature[i].imageUrl %>" alt="imageUrl"
                                                 width="70px">
                                         </td>
                                         <td>
